# Hausly

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md
apps/api/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  test_token.py  utputFormat
apps/api/hausly/: __init__.py  config.py  database.py  dependencies.py  main.py  middleware.py  ratelimit.py  telemetry.py  version.py
apps/api/hausly/ai/: service.py
apps/api/hausly/auth/: firebase.py  router.py
apps/api/hausly/jobs/: __init__.py  chore_assignments.py  recurring_expenses.py
apps/api/hausly/models/: __init__.py  base.py
apps/api/hausly/modules/: __init__.py
apps/api/hausly/realtime/: __init__.py  router.py  signalr.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial.py  002_households.py  003_grocery.py  004_expenses.py  005_meals.py  006_chores.py  007_chore_assignment_unique.py
apps/api/scripts/: firebase-login.ps1  login-and-verify.ps1  verify-token.ps1
apps/api/scripts/manual-tests/: phase3.ps1  phase4.ps1  phase5.ps1  phase6.ps1  phase7.ps1  phase8.ps1  phase9.ps1
apps/api/scripts/sql/: nuke_all_data.sql  remove_user_from_household.sql
apps/api/tests/: conftest.py
apps/api/tests/modules/: __init__.py  test_auth.py  test_chore.py  test_expense.py  test_grocery.py  test_household.py  test_integration.py  test_jobs.py  test_meal.py  test_phase16_smoke.py  test_phase1_smoke.py  test_phase2_smoke.py  test_phase3_smoke.py  test_phase4_smoke.py  test_phase5_smoke.py  test_phase6_smoke.py  test_phase7_smoke.py  test_phase8_smoke.py  (+1 more)
(+193 files in other folders)
